# XNOR-SDK

./: LICENSE  README.md  main.py  requirements.txt  xnor_convolution.cpp  xnor_net.py
NN_Flow/: CMakeLists.txt  NNTraning.pro  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  netlayer.cpp  netlayer.h  nndetect.cpp  nndetect.h  non_linear_svms.cpp  target.txt  todo.txt  ui_mainwindow.h
